@@ -145,5 +145,15 @@
 <span class="tx-comments-count-wrap"><a href="###COMMENTS_LINK####tx-comments-comments-###UID###" class="tx-comments-count">###COMMENTS_COUNT_NONE###</a></span>
 <!-- ###TTNEWS_COMMENT_NONE_SUB### end -->
 
+
+
+<!-- ###ERROR_SUB### begin -->
+<ul class="tx-comments-errors">
+	<!-- ###ERROR### begin -->
+		<li>###MESSAGE</li>
+	<!-- ###ERROR### end -->
+</ul>
+<!-- ###ERROR_SUB### end -->
+
 </body>
 </html>
